[package]
name = "sticknodes-js"
description = "JavaScript bindings for unofficial Stick Nodes asset manipulation library. Currently only supports Stickfigures. Currently only supports assets up to version 4.1.0 build 21."
keywords = ["stick", "nodes", "asset", "read", "write"]
categories = ["parser-implementations"]
version = "1.0.0"
license = "MIT"
edition = "2024"

[badges]
maintenance = { status = "passively-maintained" }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
ts-rs = "10.1.0"
sticknodes-rs = "1.0.0"

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = []
